# django_react_todo_v2

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/config/: production_urls.py  urls.py  views.py
backend/config/settings/: common.py  production.py  production_backup.py  staging.py
backend/templates/: index.html
backend/todos/: admin.py  models.py
backend/todos/api/: serializers.py  urls.py  views.py
backend/utils/: custom_exception_handler.py  helpers.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  axios.js  index.css  index.js
frontend/src/components/: ClearModal.js  DeleteModal.js  Form.js
frontend/src/helpers/: Helper.js
